# lab1-prl

./: .gitignore  CMakeLists.txt  aphi  average.cpp  barrier.h  fib.cpp  main.cpp  random.cpp  reduce_par.h  srandom.cpp  thread_num.cpp
